K8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudops-backend-service
  namespace: cloudops

spec:
  selector:
    app: cloudops-backend

  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000

  type: ClusterIP
