K8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudops-frontend-service
  namespace: production-platform
spec:
  selector:
    app: cloudops-frontend

  ports:
  - port: 80
    targetPort: 80

  type: LoadBalancer
