K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudops-ingress
  namespace: production-platform

spec:
  ingressClassName: nginx

  rules:
  - host: cloudops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudops-frontend-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: cloudops-backend-service
            port:
              number: 5000
